<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.DetectionFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/green_stardar"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_placeholder"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/detect_ingridients"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/photo_placeholder"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_detect" />

        <TextView
            android:id="@+id/loadingInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_italic"
            android:text="@string/analyzing_ingridient"
            android:textColor="@color/green_stardar"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/resultScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/buttonPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_placeholder"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonPhoto"
            android:visibility="visible"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="Take A Photo"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_photo_camera_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_placeholder" />

        <Button
            android:id="@+id/buttonGallery"
            android:visibility="visible"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="left|center_vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/pick_from_gallery"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPhoto"
            app:strokeColor="@color/green_stardar"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/buttonDetect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/detect"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_document_scanner_24"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_placeholder" />

        <Button
            android:id="@+id/buttonCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loadingInformation"
            app:strokeColor="@color/green_stardar"
            app:strokeWidth="3dp" />

        <TextView
            android:id="@+id/title_edittext"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/detection_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_placeholder" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_title_for_detection"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textColorHint="@color/border_grey"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/editTextIngridients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edittext"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/title_edittext_ingridients"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ingridient_detected_edit_if_needed"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editTextIngridients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/edit_detected_ingridients_text"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textColorHint="@color/border_grey"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="462dp"
            app:layout_constraintTop_toBottomOf="@+id/title_edittext_ingridients"/>

        <Button
            android:id="@+id/buttonProcess"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/process"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_cloud_upload_24"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancelProcess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextIngridients" />

        <Button
            android:id="@+id/buttonCancelProcess"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonProcess"
            app:strokeColor="@color/green_stardar"
            app:strokeWidth="3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>